<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PRM391x_TourGuide_vannttfx07913</string>
    <string name="app_title">Tour Guide App</string>
    <string name="location">Hà Nội, Việt Nam</string>
    <string name="hotel">Khách Sạn</string>
    <string name="atm">ATM</string>
    <string name="hospital">Bệnh Viện</string>
    <string name="metro">Xe Buýt</string>
    <string name="back">Về trang trước</string>
    <string name="hotel_slogan">Your best Room Service!</string>
    <string name="atm_slogan">All bank services in a single machine!</string>
    <string name="hospital_slogan">Your health is our goal!</string>
    <string name="metro_slogan">Minimum cost to reach your destination in time!</string>
</resources>