<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:layout_margin="@dimen/margin">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/flag_size"
        android:src="@drawable/vietnam"
        android:layout_columnSpan="2"
        android:contentDescription="@string/location"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:text="@string/location"
        android:textSize="@dimen/text_size1"
        android:textColor="@color/purple_500"
        android:layout_gravity="center"
        android:padding="@dimen/text_padding"/>
    <ImageButton
        android:id="@+id/hotel_img"
        android:layout_width="@dimen/imgBtn_size"
        android:layout_height="@dimen/imgBtn_size"
        android:layout_columnWeight="0.5"
        android:layout_gravity="center"
        android:background="@color/purple_200"
        android:outlineAmbientShadowColor="@color/teal_200"
        android:outlineProvider="bounds"
        android:src="@drawable/hotel"
        android:scaleType="fitCenter"
        android:contentDescription="@string/hotel"/>
    <ImageButton
        android:id="@+id/atm_img"
        android:layout_width="@dimen/imgBtn_size"
        android:layout_height="@dimen/imgBtn_size"
        android:layout_columnWeight="0.5"
        android:layout_gravity="center"
        android:background="@color/teal_200"
        android:src="@drawable/atm_machine"
        android:scaleType="fitCenter"
        android:contentDescription="@string/atm"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="0.5"
        android:layout_gravity="center"
        android:padding="@dimen/text_padding"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:text="@string/hotel"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="0.5"
        android:layout_gravity="center"
        android:padding="@dimen/text_padding"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:text="@string/atm"/>
    <ImageButton
        android:id="@+id/hospital_img"
        android:layout_width="@dimen/imgBtn_size"
        android:layout_height="@dimen/imgBtn_size"
        android:layout_columnWeight="0.5"
        android:layout_gravity="center"
        android:background="@color/yellow"
        android:src="@drawable/hospital"
        android:scaleType="fitCenter"
        android:contentDescription="@string/hospital"/>
    <ImageButton
        android:id="@+id/metro_img"
        android:layout_width="@dimen/imgBtn_size"
        android:layout_height="@dimen/imgBtn_size"
        android:layout_columnWeight="0.5"
        android:layout_gravity="center"
        android:background="@color/pink"
        android:src="@drawable/metro"
        android:scaleType="fitCenter"
        android:contentDescription="@string/metro"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="0.5"
        android:layout_gravity="center"
        android:padding="@dimen/text_padding"
        android:textStyle="bold"
        android:textSize="@dimen/text_size"
        android:text="@string/hospital"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="0.5"
        android:layout_gravity="center"
        android:padding="@dimen/text_padding"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:text="@string/metro"/>
</GridLayout>